--- a/style.css
+++ b/style.css
@@ -30,3 +30,12 @@ body{
     font-size: 8vmin;
     color:#b0413e;
 }
+#reset-btn{
+    padding:1rem;
+    width:8rem;
+    font-size: 1.25rem;
+    background-color: #191913;
+    color:#fff;
+    border-radius: 1rem;
+    border:none;
+}
